Fixes display of news-feed nav items on mobile displays

--- a/wsgi/iportalen_django/local_static/css/iportalen.css
+++ b/wsgi/iportalen_django/local_static/css/iportalen.css
@@ -2390,9 +2390,13 @@ div.booking-container .third-container .third .center {
   text-transform: uppercase;
   color: #ababab;
   padding: 0.2em;
-  margin-right: 2em;
   margin-bottom: 2em;
   font-weight: bold;
+}
+@media screen and (min-width: 1200px) {
+  #news-feed a.content-type-nav {
+    margin-right: 2em;
+  }
 }
 #news-feed .active {
   border-bottom: 2px solid #f9d026;
